[project]
name = "agent-eyes"
version = "1.0.0"
description = "Give your AI Agent eyes to see the entire internet — search, read, and extract content from 10+ platforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Neo Reid"},
    {name = "Leo (x-reader)", email = "runes.leo@gmail.com"},
]
keywords = ["ai-agent", "web-reader", "search", "reddit", "github", "content-extraction", "mcp", "agent-infrastructure"]
dependencies = [
    "requests>=2.28",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.urls]
Homepage = "https://github.com/Panniantong/agent-eyes"
Repository = "https://github.com/Panniantong/agent-eyes"
Issues = "https://github.com/Panniantong/agent-eyes/issues"

[project.optional-dependencies]
telegram = ["telethon>=1.34"]
mcp = ["mcp[cli]>=1.0"]
browser = ["playwright>=1.40"]
all = ["telethon>=1.34", "mcp[cli]>=1.0", "playwright>=1.40"]

[project.scripts]
agent-eyes = "agent_eyes.cli:main"
x-reader = "agent_eyes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_eyes"]
